--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.16",
+    "hamburgers": "^1.2.1",
     "next": "14.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.6"
   },
   "devDependencies": {
     "@types/node": "^20",
