--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.16.16",
     "hamburgers": "^1.2.1",
     "next": "14.0.3",
+    "node": "^21.2.0",
     "react": "^18.2.0",
     "react-dom": "^18",
     "sass": "^1.69.6"
