--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18",
-    "sass": "^1.69.6",
-    "tailwind-group-even-odd": "^1.0.0"
+    "sass": "^1.69.6"
   },
   "devDependencies": {
     "@types/node": "^20",
