--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
     "framer-motion": "^10.16.16",
     "hamburgers": "^1.2.1",
     "next": "14.0.3",
