--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@vercel/analytics": "^1.1.2",
     "framer-motion": "^10.16.16",
     "hamburgers": "^1.2.1",
-    "next": "14.0.3",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18",
     "sass": "^1.69.6"
